# genotypst

./: README.md  justfile  typst.toml
docs/: dp_matrix_example.typ  genome_map_colors_example.typ  genome_map_example.typ  logo_example.typ  manual.typ  msa_example.typ  pair_alignment_example.typ  template.typ  tree_example.typ
docs/data/: NC_000913.gff3
plugins/: build.sh
plugins/alignment/: Cargo.toml  build.rs
plugins/alignment/src/: aligners.rs  alignment.rs  lib.rs  matrices.rs  output.rs  scoring.rs
plugins/genome_map/: Cargo.toml
plugins/genome_map/src/: gff.rs  layout.rs  lib.rs
plugins/newick/: Cargo.toml
plugins/newick/src/: lib.rs
plugins/tree/: Cargo.toml
src/: alignment.wasm  constants.typ  lib.typ  newick.wasm  parse.typ  render-alignment.typ  render-genome-map.typ  render-msa.typ  render-scoring-matrix.typ  render-seq-logo.typ  render-tree.typ  tree-fit.typ  tree-layout.typ  tree-plan.typ  utils.typ
src/alignment/: alignment.wasm  alignment_backend.typ  alignment_coords.typ  dp_matrix.typ  pair_alignment.typ  scoring_matrix.typ
src/common/: axis_scale.typ  colors.typ  fixed_grid.typ  layout_math.typ
src/genome_map/: feature_parsers.typ  genome_map.typ  genome_map.wasm  genome_map_backend.typ  genome_map_layout.typ  ontology.typ  palette.typ
src/sequence/: fasta.typ  msa.typ  residue_palette.typ  sequence_alphabet.typ  sequence_logo.typ  sequence_processing.typ
src/tree/: newick.wasm  newick_parser.typ  tree.typ  tree.wasm  tree_backend.typ  tree_composition.typ  tree_fit.typ  tree_layout.typ  tree_primitives.typ  tree_render.typ
(+3 files in other folders)
