[package]
name = "genome-map"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bio = { version = "3.0.0", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-minimal-protocol = "0.1"
